# bsod_arena

./: .gitignore  .luarc.json  Cargo.toml  README.md  ch.sh  character_controller  devenv.nix  dy.sh  flake.nix  trace.sh
assets/: test.ldtk
assets/meshes/: character.glb
assets/scripts/: player.lua  test.lua
source_assets/: character.blend  character.blend1
src/: character_controller.rs  cursor.rs  debug.rs  lib.rs  main.rs  networking.rs  player.rs  scripting.rs  state.rs
src/character_controller/: movement.rs
src/common/: character_controller.rs
src/common/character_controller/: client.rs  server.rs
src/networking/: config.rs
src/player/: client.rs  server.rs
