[[bin]]
name = "lower_levels"
path = "src/main.rs"

[dependencies]
bevy-inspector-egui = "0.24.0"
bevy_xpbd_3d = { version = "0.4.2", features = ["serialize"] }
iyes_perf_ui = "0.2.3"
leafwing-input-manager = "0.13.3"
spin_sleep = "1.2.0"

[dependencies.bevy]
default-features = false
features = ["bevy_asset", "bevy_audio", "bevy_gilrs", "bevy_scene", "bevy_winit", "bevy_core_pipeline", "bevy_pbr", "bevy_gltf", "bevy_render", "bevy_sprite", "bevy_text", "bevy_ui", "file_watcher", "multi-threaded", "png", "vorbis", "x11", "wayland", "bevy_gizmos", "tonemapping_luts", "default_font"]
version = "0.13"

[dependencies.derive_more]
features = ["add", "mul"]
version = "0.99"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[lib]
name = "lower_levels"
path = "src/lib.rs"

[package]
edition = "2021"
name = "lower_levels"
version = "0.1.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
debug = false
incremental = false
lto = true
opt-level = 3
